# GeoLab

./: .gitattributes  .gitignore  CMakeLists.txt  LICENCE  LICENSE  ProjectAtlasConfig.h.in  README.md  requirements.txt
Atlas/: lh_CAC-CAC_1_short.bundles  lh_CAC-CAC_2_short.bundles  lh_CAC-CAC_2_short.bundlesdata  lh_CAC-MOF_1_short.bundles  lh_CAC-MOF_1_short.bundlesdata  lh_CAC-PoCi_1_short.bundles  lh_CAC-PrCu_1_short.bundles  lh_CAC-RAC_1_short.bundles  lh_CAC-RAC_1_short.bundlesdata  lh_CAC-SF_1_short.bundles  lh_CAC-SF_2_short.bundles  lh_CAC-SF_3_short.bundles  lh_CAC-SF_4_short.bundles  lh_CAC-SF_5_short.bundles  lh_CAC-SF_5_short.bundlesdata  lh_CMF-CMF_1_short.bundles  lh_CMF-CMF_2_1_short.bundles  lh_CMF-CMF_2_2_short.bundles  lh_CMF-CMF_2_2_short.bundlesdata  lh_CMF-CMF_3_short.bundles  lh_CMF-CMF_4_short.bundles  lh_CMF-CMF_4_short.bundlesdata  lh_CMF-CMF_5_short.bundles  lh_CMF-CMF_5_short.bundlesdata  lh_CMF-CMF_6_short.bundles  lh_CMF-CMF_7_short.bundles  lh_CMF-CMF_8_short.bundles  lh_CMF-CMF_8_short.bundlesdata  lh_CMF-Op_1_short.bundles  lh_CMF-PoC_1_short.bundles  lh_CMF-PrC_1_short.bundles  lh_CMF-PrC_1_short.bundlesdata  lh_CMF-PrC_2_short.bundles  lh_CMF-PrC_2_short.bundlesdata  lh_CMF-PrC_3_short.bundles  lh_CMF-RMF_1_short.bundles  lh_CMF-RMF_2_short.bundles  lh_CMF-RMF_3_short.bundles  lh_CMF-RMF_3_short.bundlesdata  lh_CMF-SF_1_1_short.bundles  (+33 more)
Atlas/CentroidsBundles/: lh_CAC-CAC_1_short.bundlesdata  lh_CAC-CAC_2_short.bundles  lh_CAC-CAC_2_short.bundlesdata  lh_CAC-MOF_1_short.bundlesdata  lh_CAC-PoCi_1_short.bundles  lh_CAC-PoCi_1_short.bundlesdata  lh_CAC-PrCu_1_short.bundles  lh_CAC-PrCu_1_short.bundlesdata  lh_CAC-RAC_1_short.bundles  lh_CAC-RAC_1_short.bundlesdata  lh_CAC-SF_1_short.bundles  lh_CAC-SF_1_short.bundlesdata  lh_CAC-SF_2_short.bundlesdata  lh_CAC-SF_3_short.bundles  lh_CAC-SF_3_short.bundlesdata  lh_CAC-SF_4_short.bundlesdata  lh_CAC-SF_5_short.bundles  lh_CAC-SF_5_short.bundlesdata  lh_CMF-CMF_1_short.bundlesdata  lh_CMF-CMF_2_1_short.bundles  lh_CMF-CMF_2_1_short.bundlesdata  lh_CMF-CMF_2_2_short.bundlesdata  lh_CMF-CMF_3_short.bundles  lh_CMF-CMF_3_short.bundlesdata  lh_CMF-CMF_4_short.bundlesdata  lh_CMF-CMF_5_short.bundles  lh_CMF-CMF_5_short.bundlesdata  lh_CMF-CMF_6_short.bundlesdata  lh_CMF-CMF_7_short.bundlesdata  lh_CMF-CMF_8_short.bundles  lh_CMF-CMF_8_short.bundlesdata  lh_CMF-Op_1_short.bundles  lh_CMF-Op_1_short.bundlesdata  lh_CMF-PoC_1_short.bundlesdata  lh_CMF-PrC_1_short.bundlesdata  lh_CMF-PrC_2_short.bundlesdata  lh_CMF-PrC_3_short.bundlesdata  lh_CMF-RMF_1_short.bundles  lh_CMF-RMF_1_short.bundlesdata  lh_CMF-RMF_2_short.bundlesdata  (+850 more)
Atlas/CentroidsTck/: lh_CAC-CAC_1_short.minf  lh_CAC-CAC_1_short.tck  lh_CAC-CAC_2_short.tck  lh_CAC-MOF_1_short.tck  lh_CAC-PoCi_1_short.minf  lh_CAC-PoCi_1_short.tck  lh_CAC-PrCu_1_short.tck  lh_CAC-RAC_1_short.tck  lh_CAC-SF_1_short.minf  lh_CAC-SF_1_short.tck  lh_CAC-SF_2_short.minf  lh_CAC-SF_2_short.tck  lh_CAC-SF_3_short.tck  lh_CAC-SF_4_short.tck  lh_CAC-SF_5_short.tck  lh_CMF-CMF_1_short.tck  lh_CMF-CMF_2_1_short.tck  lh_CMF-CMF_2_2_short.tck  lh_CMF-CMF_3_short.minf  lh_CMF-CMF_3_short.tck  lh_CMF-CMF_4_short.tck  lh_CMF-CMF_5_short.tck  lh_CMF-CMF_6_short.tck  lh_CMF-CMF_7_short.tck  lh_CMF-CMF_8_short.tck  lh_CMF-Op_1_short.minf  lh_CMF-Op_1_short.tck  lh_CMF-PoC_1_short.minf  lh_CMF-PoC_1_short.tck  lh_CMF-PrC_1_short.minf  lh_CMF-PrC_1_short.tck  lh_CMF-PrC_2_short.tck  lh_CMF-PrC_3_short.tck  lh_CMF-RMF_1_short.minf  lh_CMF-RMF_1_short.tck  (+812 more)
ProjectAtlasFiles/: AtlasBundles.cxx  AtlasBundles.h  BMDDistance.cxx  BMDDistance.h  BundlesDataFormat.cxx  BundlesDataFormat.h  BundlesFormat.cxx  BundlesFormat.h  CMakeLists.txt  RecognizedBundles.cxx  RecognizedBundles.h  TrkFormat.cxx  TrkFormat.h  bundlesData.cxx  bundlesMinf.cxx  bundlesMinf.h  niftiImage.h
SGT/: SGT.bundles  SGT.bundlesdata  SGT.h5  SGT.tck  SGT.trk  labels.dict  sgt.bundles  sgt.bundlesdata  sgt.tck  sgt.trk
TrainedSupWMA/: classifierWeights.pth  encoderParameters.pickle  labelNames.h5  labelsDictSupWMA.txt
apps/: CMakeLists.txt  ConvertBundleFormat.cxx  ConvertBundleFormat.h  ProjectAtlas.cxx  ProjectAtlas.h  ProjectAtlasGeoLab.cxx  ProjectAtlasGeoLab.h  alignFibers.cxx  alignFibersInBundle.cxx  alignFibersInBundleToPlaneXY.cxx  alignFibersInBundleToPlaneXY.h  analyseAtlasBundle.cxx  analyseAtlasBundle.h  analyseAtlasBundle.py  applyFlirtToTck.py  applyPredictedLabels.cxx  applyPredictedLabels.h  applySupWMA.py  applyTransformBundle.cxx  clientCloseServer.py  clientComputeCentroids.py  clientRegisterBundles.py  compareBundlesToAtlas.cxx  compareBundlesToAtlas.h  computeAdjacency.cxx  computeCenterAtlasBundles.cxx  computeCenterAtlasBundles.h  computeCentroids.cxx  computeCentroids.h  computeCoverage.cxx  computeCoverage.h  computeMeanAndStdFeaturesAtlas.py  computeNeighborhood.cxx  computeNeighborhood.h  computeOverlap.cxx  computeQuickBundlesCentroids.cxx  computeScoresFromLabels.cxx  computeScoresFromLabels.h  computeScoresFromLabels.py  convertAtlasFormat.cxx  (+32 more)
apps-config/: CMakeLists.txt
dipyServiceClient/: clientCloseServer.py  clientComputeCentroids.py  clientRegisterBundles.py  clientTestConnectoin.py  dipyServer.py
doc/: Doxyfile.in
src/: AtlasBundles.cxx  AtlasBundles.h  CMakeLists.txt  ConvertBundleFormat.cxx  ConvertBundleFormat.h  ProjectAtlas.cxx  ProjectAtlas.h  ProjectAtlasGeoLab.cxx  ProjectAtlasGeoLab.h  RecognizedBundles.cxx  RecognizedBundles.h  alignFibers.cxx  alignFibers.h  alignFibersInBundle.cxx  alignFibersInBundle.h  alignFibersInBundleToPlaneXY.cxx  alignFibersInBundleToPlaneXY.h  analyseAtlasBundle.cxx  analyseAtlasBundle.h  applyPredictedLabels.cxx  applyPredictedLabels.h  applyTransformBundle.cxx  applyTransformBundle.h  bundlesData.cxx  bundlesData.h  bundlesMinf.cxx  bundlesMinf.h  compareBundlesToAtlas.cxx  computeCenterAtlasBundles.cxx  computeCentroids.cxx  computeCentroids.h  computeNeighborhood.cxx  computeNeighborhood.h  correctBundlesNan.cxx  correctBundlesNan.h  createMinf.cxx  fuseAtlas.cxx  fuseAtlas.h  getFileForPlotsMiguel.cxx  ioWrapper.cxx  (+11 more)
(+9300 files in other folders)
